Added booking system links

--- a/src/pug/corporate-events/index.pug
+++ b/src/pug/corporate-events/index.pug
@@ -49,7 +49,7 @@ block content
             div
               span £50/driver
               span 16+ drivers
-        p Corporate bookings are subject to VAT at the current rate.
+        p Corporate bookings are subject to VAT at the current rate. #[a(href='/contact' target='_blank') Call us today] to book a corporate event.
               
       .content-block
         h2 Bespoke Corporate Packages
