--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -31,8 +31,12 @@ block content
       h1.center The midlands' #[span.red premiere] indoor karting experience
       h2.center Specialists in Corporate Entertainment and Hospitality
       div
-        a.button.button__primary(href='/contact') Book Now
+        a.button.button__primary(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx' target='_blank') Book Now
         a.button.button__grey(href='/race-packages') Price List
+        
+  .header-video__reopening(href="/layout" target="_blank")
+    .container 
+      h3.center Taking Bookings Now - Reopening on May 17th!
 
   section.grey.category-cards
     .container
