--- a/src/pug/juniors-and-parties/index.pug
+++ b/src/pug/juniors-and-parties/index.pug
@@ -38,8 +38,9 @@ block content
             div
               span £300
               span up to 8 drivers
+              a(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?packagegroup=juniorpartypackage' target='_blank') Book Now
 
-        p 11 driver, 16 driver, and 20 driver party packages also available. 
+        p 11 driver, 16 driver, and 20 driver party packages also available.
               
       .content-block
         h2 1 Hour Practice / Family Session
@@ -58,3 +59,4 @@ block content
             div
               span £400
               span up to 10 drivers
+              a(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=privatehire1hour10drivers400' target='_blank') Book Now
