--- a/src/css/style.styl
+++ b/src/css/style.styl
@@ -49,6 +49,17 @@
       display inline-block
       color white
 
+  &__reopening
+    background-color primaryColorAccent
+    display block
+    color white
+    text-align center
+    padding 1rem 0
+
+    h3
+      margin 0
+      font-size 2.8rem
+
   &::-webkit-media-controls-panel 
     display none!important
     -webkit-appearance none 
@@ -462,7 +473,8 @@
               color red
 
             p
-              margin 0
+              margin .5rem 0
+              line-height 1.2
 
           &:nth-child(2)
             width 14rem
@@ -479,6 +491,19 @@
 
               &:first-child
                 color red
+
+            a 
+              display inline-block
+              padding .5rem 1rem
+              margin-top .5rem
+              background linkColorAccent
+              color white
+              font-weight 700
+              font-size 1.4rem
+
+              &:hover
+                text-decoration none
+                background mainGreen
 
 
 .arrive-and-drive
