--- a/src/pug/arrive-and-drive/index.pug
+++ b/src/pug/arrive-and-drive/index.pug
@@ -40,6 +40,7 @@ block content
                 div
                   span £20/driver
                   span Junior Racer & Adult SR4
+                  a(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=juniorandfamilieskartingmidweekbefore18:00020laps' target='_blank') Book Now
               li
                 div
                   h3 40 lap practice
@@ -47,6 +48,7 @@ block content
                 div
                   span £30/driver
                   span Junior Racer & Adult SR4
+                  a(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=juniorandfamilieskartingmidweekbefore18:00040laps2x20laps' target='_blank') Book Now
               li
                 div
                   h3 60 lap practice
@@ -55,6 +57,7 @@ block content
                 div
                   span £35/driver
                   span Junior Racer & Adult SR4
+                  a(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=juniorandfamilieskartingmidweekbefore18:00060laps3x20laps' target='_blank') Book Now
 
       .split
         .race-packages__price-list.full-width
@@ -69,6 +72,7 @@ block content
                 div
                   span £20/driver
                   span Adult SR4 200cc
+                  a(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=practice020lap' target='_blank') Book Now
               li
                 div
                   h3 40 lap practice
@@ -76,6 +80,7 @@ block content
                 div
                   span £30/driver
                   span Adult SR4 200cc
+                  a(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=practice040lap2x20laps' target='_blank') Book Now
               li
                 div
                   h3 60 lap practice
@@ -83,6 +88,7 @@ block content
                 div
                   span £35/driver
                   span Adult SR4 200cc
+                  a(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=practice060lap3x20laps' target='_blank') Book Now
               li
                 div
                   h3 100 lap practice
@@ -90,5 +96,6 @@ block content
                 div
                   span £45/driver
                   span Adult SR4 200cc
+                  a(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=practice100lap4x25laps200cconly' target='_blank') Book Now
 
-            p Standard 160cc adult karts are available for £5 less at selected times for 14yrs+.
+            p Standard 160cc adult karts are available for £5 less at selected times for 14yrs+. Please call us to book standard karts.
