--- a/src/pug/race-packages/index.pug
+++ b/src/pug/race-packages/index.pug
@@ -38,6 +38,7 @@ block content
             div
               span £40 per driver
               span 13+ drivers
+              a(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=grandprix40driver' target='_blank') Book Now
           li
             div
               h3 Ultimate Super Grand Prix
@@ -48,6 +49,7 @@ block content
             div
               span £45 per driver
               span 13+ drivers
+              a(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=supergrandprix45driver' target='_blank') Book Now
 
       .content-block
         h2 Team Challenge Events
@@ -62,6 +64,7 @@ block content
             div
               span £100 per Team
               span 2/3 Drivers per Team
+              a(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=endurance090teamchallenge23drivers100team' target='_blank') Book Now
           li
             div
               h3 Team Challenge 120
@@ -70,6 +73,7 @@ block content
             div
               span £125 per Team
               span 3 Drivers per Team
+              a(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=endurance120teamchallenge3drivers125team' target='_blank') Book Now
           li
             div
               h3 Team Challenge 150
@@ -78,6 +82,7 @@ block content
             div
               span £150 per Team
               span 3/4 Drivers per Team
+              a(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=endurance150teamchallenge34drivers150team' target='_blank') Book Now
               
       .content-block
         h2 Endurance Events
@@ -101,6 +106,7 @@ block content
             div
               span £35.00 per driver
               span 8-10 drivers
+              a(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=endurance030dash35driver' target='_blank') Book Now
           li
             div
               h3 Challenge 45
@@ -110,6 +116,7 @@ block content
             div
               span £45.00 per driver
               span 8-10 drivers
+              a(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=endurance045challenge45driver' target='_blank') Book Now
           li
             div
               h3 Super Challenge 60
@@ -119,4 +126,5 @@ block content
             div
               span £55.00 per driver
               span 8-10 drivers
+              a(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=endurance060superchallenge55driver' target='_blank') Book Now
               
