--- a/src/pug/arrive-and-drive/index.pug
+++ b/src/pug/arrive-and-drive/index.pug
@@ -26,76 +26,99 @@ block content
           p Standard 160cc adult karts are available for £5 less at selected times for 14yrs+.
 
 
-    .container.split-container
-      .split
-        .race-packages__price-list.full-width
-          .content-block          
-            h3 Junior and Family Open Karting
-            .red-highlight
-            ul.race-packages__price-list--packages
-              li
-                div
-                  h3 20 lap practice
-                  p 20 Laps (15 Minute) Non-Stop Session
-                div
-                  span £20/driver
-                  span Junior Racer & Adult SR4
-                  a(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=juniorandfamilieskartingmidweekbefore18:00020laps' target='_blank') Book Now
-              li
-                div
-                  h3 40 lap practice
-                  p 2 x 20 Laps (15 Minute) Sessions
-                div
-                  span £30/driver
-                  span Junior Racer & Adult SR4
-                  a(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=juniorandfamilieskartingmidweekbefore18:00040laps2x20laps' target='_blank') Book Now
-              li
-                div
-                  h3 60 lap practice
-                  p 3 x 20 Laps (15 Minute) Sessions
-                  p Midweek Only
-                div
-                  span £35/driver
-                  span Junior Racer & Adult SR4
-                  a(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=juniorandfamilieskartingmidweekbefore18:00060laps3x20laps' target='_blank') Book Now
+    .container.race-packages__price-list
+      .content-block          
+        h3 Junior and Family Open Karting (8yrs+)
+        .red-highlight
+        ul.race-packages__price-list--packages
+          li
+            div
+              h3 20 lap practice
+              p 20 Laps (15 Minute) Non-Stop Session
+            div
+              span £20/driver
+              span Adult SR4 200cc (14+)
+              span Junior Racer (8-13)
+              a(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=juniorandfamilieskartingmidweekbefore18:00020laps' target='_blank') Book Now
+          li
+            div
+              h3 40 lap practice
+              p 2 x 20 Laps (15 Minute) Sessions
+            div
+              span £30/driver
+              span Adult SR4 200cc (14+)
+              span Junior Racer (8-13)
+              a(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=juniorandfamilieskartingmidweekbefore18:00040laps2x20laps' target='_blank') Book Now
+          li
+            div
+              h3 60 lap practice
+              p 3 x 20 Laps (15 Minute) Sessions
+              p Midweek Only
+            div
+              span £35/driver
+              span Adult SR4 200cc (14+)
+              span Junior Racer (8-13)
+              a(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=juniorandfamilieskartingmidweekbefore18:00060laps3x20laps' target='_blank') Book Now
 
-      .split
-        .race-packages__price-list.full-width
-          .content-block
-            h3 Adult Open Karting
-            .red-highlight
-            ul.race-packages__price-list--packages
-              li
-                div
-                  h3 20 lap practice
-                  p 20 Laps (15 Minute) Non-Stop Session
-                div
-                  span £20/driver
-                  span Adult SR4 200cc
-                  a(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=practice020lap' target='_blank') Book Now
-              li
-                div
-                  h3 40 lap practice
-                  p 2 x 20 Laps (15 Minute) Sessions
-                div
-                  span £30/driver
-                  span Adult SR4 200cc
-                  a(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=practice040lap2x20laps' target='_blank') Book Now
-              li
-                div
-                  h3 60 lap practice
-                  p 3 x 20 Laps (15 Minute) Sessions
-                div
-                  span £35/driver
-                  span Adult SR4 200cc
-                  a(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=practice060lap3x20laps' target='_blank') Book Now
-              li
-                div
-                  h3 100 lap practice
-                  p 4 x 25 Laps (15 Minute) Sessions
-                div
-                  span £45/driver
-                  span Adult SR4 200cc
-                  a(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=practice100lap4x25laps200cconly' target='_blank') Book Now
+      .content-block
+        h3 Adult Open Karting (12yrs+)
+        .red-highlight
+        ul.race-packages__price-list--packages
+          li
+            div
+              h3 20 lap practice
+              p 20 Laps (15 Minute) Non-Stop Session
+            div
+              span £20/driver
+              span Adult SR4 200cc (14+)
+              span Junior Racer (12-13)
+              a(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=practice020lap' target='_blank') Book Now
+          li
+            div
+              h3 40 lap practice
+              p 2 x 20 Laps (15 Minute) Sessions
+            div
+              span £30/driver
+              span Adult SR4 200cc (14+)
+              span Junior Racer (12-13)
+              a(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=practice040lap2x20laps' target='_blank') Book Now
+          li
+            div
+              h3 60 lap practice
+              p 3 x 20 Laps (15 Minute) Sessions
+            div
+              span £35/driver
+              span Adult SR4 200cc (14+)
+              span Junior Racer (12-13)
+              a(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=practice060lap3x20laps' target='_blank') Book Now
+          li
+            div
+              h3 100 lap practice
+              p 4 x 25 Laps (15 Minute) Sessions
+            div
+              span £45/driver
+              span Adult SR4 200cc (14+) only
+              a(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=practice100lap4x25laps200cconly' target='_blank') Book Now
 
-            p Standard 160cc adult karts are available for £5 less at selected times for 14yrs+. Please call us to book standard karts.
+        p Standard 160cc adult karts are available for £5 less at selected times for 14yrs+. Please call us to book standard karts.
+
+      .content-block
+        h3 Weekend Junior Open Karting (8 – 12yrs)
+        .red-highlight
+        ul.race-packages__price-list--packages
+          li
+            div
+              h3 20 lap practice
+              p 20 Laps (15 Minute) Non-Stop Session
+            div
+              span £20/driver
+              span Junior Racer
+              a(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=juniorkartingweekend10am11am020laps' target='_blank') Book Now
+          li
+            div
+              h3 40 lap practice
+              p 2 x 20 Laps (15 Minute) Sessions
+            div
+              span £30/driver
+              span Junior Racer
+              a(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=juniorkartingweekend10am11am040laps2x20laps' target='_blank') Book Now
