--- a/src/pug/race-packages/index.pug
+++ b/src/pug/race-packages/index.pug
@@ -102,7 +102,7 @@ block content
               h3 Dash 30
               p 15 Minute Practice/Qualifying Session
               p 15 Minute Break to Discuss and Hone your Racing Lines
-              p 15 Minute Practice/Qualifying Session
+              p 15 Minute Non-Stop Race
             div
               span £35.00 per driver
               span 8-10 drivers
