--- a/src/pug/arrive-and-drive/index.pug
+++ b/src/pug/arrive-and-drive/index.pug
@@ -39,7 +39,7 @@ block content
               span £20/driver
               span Adult SR4 200cc (14+)
               span Junior Racer (8-13)
-              a(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=juniorandfamilieskartingmidweekbefore18:00020laps' target='_blank') Book Now
+              a(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=juniorandfamilieskarting020laps' target='_blank') Book Now
           li
             div
               h3 40 lap practice
@@ -48,7 +48,7 @@ block content
               span £30/driver
               span Adult SR4 200cc (14+)
               span Junior Racer (8-13)
-              a(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=juniorandfamilieskartingmidweekbefore18:00040laps2x20laps' target='_blank') Book Now
+              a(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=juniorandfamilieskarting040laps2x20laps' target='_blank') Book Now
           li
             div
               h3 60 lap practice
@@ -58,7 +58,7 @@ block content
               span £35/driver
               span Adult SR4 200cc (14+)
               span Junior Racer (8-13)
-              a(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=juniorandfamilieskartingmidweekbefore18:00060laps3x20laps' target='_blank') Book Now
+              a(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=juniorandfamilieskarting060laps3x20laps' target='_blank') Book Now
 
       .content-block
         h3 Adult Open Karting (12yrs+)
