Minor text amends

--- a/src/pug/corporate-events/index.pug
+++ b/src/pug/corporate-events/index.pug
@@ -23,7 +23,7 @@ block content
         .red-highlight        
         p Corporate Hospitality at it’s finest.
         p Our corporate Grand Prix offers the ultimate high-octane team-building experience, igniting competition and pitting your team head-to-head in a friendly environment. With access to catering and our corporate boardroom, Fast Lane is the perfect venue for your next corporate event. 
-        p Groups will have exclusive use of the facilities for the duration of the event. If you would like exclusive use of the facility and corporate room then #[a(href='/contact' target='_blank') Call us today] to find out how we can cater for your company. 
+        p Groups will have exclusive use of the track for the duration of the event. If you would like exclusive use of the facility and corporate room then #[a(href='/contact' target='_blank') Call us today] to find out how we can cater for your company. 
         p.no-margin.bold All Grand Prix Events Include:
         ul.race-packages__price-list--includes
           li Trophies for 1st, 2nd and 3rd place
