--- a/src/pug/race-packages/index.pug
+++ b/src/pug/race-packages/index.pug
@@ -22,7 +22,7 @@ block content
         h2 Grand Prix Events
         .red-highlight
         p This event is set for medium/large groups intent on a good night's racing, and offers the ultimate karting experience. Groups will have exclusive use of the track for the duration of the event.
-        p Grand Prix heats allow every driver to start from different positions in the grid, positions are all worked out by our computer so that it's as fair as possible across the event.      
+        p Grand Prix heats allow every driver to start from different positions on the grid, positions are all worked out by our computer so that it's as fair as possible across the event.      
 
         p.no-margin.bold All Grand Prix Events Include:
         ul.race-packages__price-list--includes
