Altered Book Now generic link

--- a/src/pug/contact/index.pug
+++ b/src/pug/contact/index.pug
@@ -20,6 +20,7 @@ block content
           p 01782 250 450
           h5 Email Us
           p track@fastlanekarting.co.uk
+          a.button.button__primary(href='/#packages' target='_blank') Book Online
           h5 Social Media
           .contact__social
             a(href='https://www.facebook.com/fastlanekartingindoor' target='_blank')
