--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -31,10 +31,10 @@ block content
       h1.center The midlands' #[span.red premiere] indoor karting experience
       h2.center Specialists in Corporate Entertainment and Hospitality
       div
-        a.button.button__primary(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx' target='_blank') Book Now
-        a.button.button__grey(href='/race-packages') Price List
+        a.button.button__primary(href='#packages') Book Online
+        a.button.button__grey(href='/race-packages') Race Packages
         
-  .header-video__reopening(href="/layout" target="_blank")
+  #packages.header-video__reopening(href="/layout" target="_blank")
     .container 
       h3.center Taking Bookings Now - Reopening on May 17th!
 
@@ -47,7 +47,7 @@ block content
           h2 Race Packages
           .red-highlight
           p The perfect choice for team building, stag/hen parties and group events! Pit your skill and endurance against each other with our selection of Grand Prix and Endurance race packages. Racing times range from 30 to 150 minutes with food provided on-site.
-          a.button.button__primary(href='/race-packages') View Prices
+          a.button.button__primary(href='/race-packages') Book Online
       .category-cards__card
         .category-cards__card--image
           img(src='/images/home-categories/juniors-and-parties.jpg' alt='Juniors & Parties')
@@ -55,7 +55,7 @@ block content
           h2 Juniors & Parties
           .red-highlight
           p Go-karting makes a great birthday party or family event for up to 8 people. Our junior packages include up to one hour of track time per driver, a hot meal and drinks in our private corporate lounge overlooking the track, plus medals and a trophy for the birthday host.
-          a.button.button__primary(href='/juniors-and-parties') View Prices
+          a.button.button__primary(href='/juniors-and-parties') Book Online
       .category-cards__card
         .category-cards__card--image
           img(src='/images/home-categories/arrive-and-drive.jpg' alt='Arrive & Drive')
@@ -63,7 +63,7 @@ block content
           h2 Arrive & Drive
           .red-highlight
           p There's no need to book for small groups - turn up at any time and drive for up to 100 laps! Drivers aged 12 years or older are welcome anytime as long as the track is available. High performance 200cc karts are available for ages 14 and over.
-          a.button.button__primary(href='/arrive-and-drive') View Prices
+          a.button.button__primary(href='/arrive-and-drive') Book Online
           
   section.black.corporate-events
     .container.center
@@ -74,13 +74,13 @@ block content
       p.bold Run by professional people who care.
       a.button.button__primary(href='/corporate-events') View Prices
 
-  section.dark-grey
-    .container
-      #instafeed.social-feed-instagram
-        .social-feed-instagram-post
-        .social-feed-instagram-post
-        .social-feed-instagram-post
-        .social-feed-instagram-post
-        .social-feed-instagram-post
-        .social-feed-instagram-post
+  //- section.dark-grey
+  //-   .container
+  //-     #instafeed.social-feed-instagram
+  //-       .social-feed-instagram-post
+  //-       .social-feed-instagram-post
+  //-       .social-feed-instagram-post
+  //-       .social-feed-instagram-post
+  //-       .social-feed-instagram-post
+  //-       .social-feed-instagram-post
         
