--- a/src/pug/race-packages/index.pug
+++ b/src/pug/race-packages/index.pug
@@ -85,7 +85,7 @@ block content
               a(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=endurance150teamchallenge34drivers150team' target='_blank') Book Now
               
       .content-block
-        h2 Endurance Events
+        h2 Individual Endurance Events
         .red-highlight
         p Endurance racing is a fantastic team building or stag & hen party event. It is a multi lap event which can be run as individuals or teams. These events are run on our 200cc Sodi SR4 karts. They start with the Dash 30 minute Race Event going up to the 60 minute Super Challenge race for individuals, or for the Team Challenge Races we have 90 (1.5 Hours) - 150 Minute (2.5 Hours) Events.
 
