--- a/src/css/style.styl
+++ b/src/css/style.styl
@@ -570,6 +570,13 @@
       line-height 1
       margin-top -5px
 
+.coronavirus
+  padding-bottom 2rem
+
+  p
+    max-width 80rem
+    margin-left auto
+    margin-right auto
 
 @media(max-width: breakpointMedium)
 
