--- a/src/pug/juniors-and-parties/index.pug
+++ b/src/pug/juniors-and-parties/index.pug
@@ -10,6 +10,9 @@ block description
   meta(name="description" content="Our Kids' Party and Private Sessions offer the an exhilarating day out for all the family. Call 01782 250 450 or email track@fastlanekarting.co.uk to book a karting package. We're open from 10am until 10:30pm, 7 days a week.")
 
 block content
+
+  +coronavirus
+  
   section.black.race-packages
     .container
       h1.center Juniors & Parties
