--- a/src/css/style.styl
+++ b/src/css/style.styl
@@ -35,7 +35,7 @@
   overflow hidden
   display flex
   align-items center
-  background midGrey
+  background black
   user-select none
 
   &__refurb
