Removed coronavirus information

--- a/src/pug/race-packages/index.pug
+++ b/src/pug/race-packages/index.pug
@@ -11,8 +11,6 @@ block description
 
 block content
 
-  +coronavirus
-
   section.black.race-packages
     .container
       h1.center Race Packages
@@ -48,7 +46,7 @@ block content
               p 5 Lap Practice Session
               p 6 x 6 Lap Heats Per Driver
               p 8 Lap Semi Final For Top 16 Drivers
-              p 10 Lap Grand Final For Top  Drivers
+              p 10 Lap Grand Final For Top 8 Drivers
             div
               span £45 per driver
               span 13+ drivers
