--- a/src/pug/arrive-and-drive/index.pug
+++ b/src/pug/arrive-and-drive/index.pug
@@ -17,13 +17,13 @@ block content
       .red-highlight.centered
       .arrive-and-drive__description
         div
-          p Options available from £15 per driver*
-          p Arrive and Drive is for you to come and hone your skills in the Practice Lap Sessions. We can run children as low as 8 years old in the mid-week off peak times between 10.00am – 6.00pm, Monday – Friday. 
-          p For drivers 12 plus you can go on the track at anytime as long as it is available but please book to avoid disappointment.
+          p Options available from £22 per driver*
+          p Arrive and Drive is for you to come and hone your skills in the Practice Lap Sessions. We can run children as low as 8 years old in the mid-week off peak times between 10.00am – 6.00pm Monday – Friday, and at 11:00am on Sundays.
+          p For drivers aged 12yrs+, you can go on the track at anytime as long as it is available but please book to avoid disappointment.
           p Time limits apply during our peak times and busy periods.
         div
-          p We have #[span.bold Junior Karting] for 8 – 12 year olds Saturday mornings at 10.00am or during midweek from 10.00am. This is purely for this peer group, so please book in advance.
-          p #[span.bold.red PLEASE NOTE:] All drivers require a Balaclava and Gloves for hygiene reasons. Feel free to bring your own, or we can supply them for £2.00 per item.
+          p We have #[span.bold Junior Karting] for 8 – 12 year olds Saturday mornings at 10.00am or during midweek from 10.00am - 6:00pm. This is purely for this peer group, so please book in advance.
+          p #[span.bold.red PLEASE NOTE:] All drivers require a Balaclava and Gloves for hygiene reasons. Feel free to bring your own, or we can supply them for £2.50 per item.
           p Standard 160cc adult karts are available for £5 less at selected times for 14yrs+.
 
 
@@ -37,7 +37,7 @@ block content
               h3 20 lap practice
               p 20 Laps (15 Minute) Non-Stop Session
             div
-              span £20/driver
+              span £22/driver
               span Adult SR4 200cc (14+)
               span Junior Racer (8-13)
               a(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=juniorandfamilieskarting020laps' target='_blank') Book Now
@@ -45,21 +45,24 @@ block content
             div
               h3 40 lap practice
               p 2 x 20 Laps (15 Minute) Sessions
+              p Only £17.50 per session
+
             div
-              span £30/driver
+              span £35/driver
               span Adult SR4 200cc (14+)
               span Junior Racer (8-13)
               a(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=juniorandfamilieskarting040laps2x20laps' target='_blank') Book Now
           li
             div
-              h3 60 lap practice
-              p 3 x 20 Laps (15 Minute) Sessions
+              h3 66 lap practice
+              p 3 x 22 Laps (16 Minute) Sessions
               p Midweek Only
+              p Only £15.00 per session
             div
-              span £35/driver
+              span £45/driver
               span Adult SR4 200cc (14+)
               span Junior Racer (8-13)
-              a(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=juniorandfamilieskarting060laps3x20laps' target='_blank') Book Now
+              a(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=juniorandfamilieskarting066laps3x22laps' target='_blank') Book Now
 
       .content-block
         h3 Adult Open Karting (12yrs+)
@@ -70,7 +73,7 @@ block content
               h3 20 lap practice
               p 20 Laps (15 Minute) Non-Stop Session
             div
-              span £20/driver
+              span £22/driver
               span Adult SR4 200cc (14+)
               span Junior Racer (12-13)
               a(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=practice020lap' target='_blank') Book Now
@@ -78,26 +81,29 @@ block content
             div
               h3 40 lap practice
               p 2 x 20 Laps (15 Minute) Sessions
+              p Only £17.50 per session
             div
-              span £30/driver
+              span £35/driver
               span Adult SR4 200cc (14+)
               span Junior Racer (12-13)
               a(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=practice040lap2x20laps' target='_blank') Book Now
           li
             div
-              h3 60 lap practice
-              p 3 x 20 Laps (15 Minute) Sessions
+              h3 66 lap practice
+              p 3 x 22 Laps (16 Minute) Sessions
+              p Only £15.00 per session
             div
-              span £35/driver
+              span £45/driver
               span Adult SR4 200cc (14+)
               span Junior Racer (12-13)
-              a(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=practice060lap3x20laps' target='_blank') Book Now
+              a(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=practice066lap3x22laps' target='_blank') Book Now
           li
             div
               h3 100 lap practice
               p 4 x 25 Laps (15 Minute) Sessions
+              p Only £13.75 per session
             div
-              span £45/driver
+              span £55/driver
               span Adult SR4 200cc (14+) only
               a(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=practice100lap4x25laps200cconly' target='_blank') Book Now
 
@@ -112,14 +118,15 @@ block content
               h3 20 lap practice
               p 20 Laps (15 Minute) Non-Stop Session
             div
-              span £20/driver
+              span £22/driver
               span Junior Racer
               a(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=juniorkartingweekend10am11am020laps' target='_blank') Book Now
           li
             div
               h3 40 lap practice
               p 2 x 20 Laps (15 Minute) Sessions
+              p Only £17.50 per session
             div
-              span £30/driver
+              span £35/driver
               span Junior Racer
               a(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=juniorkartingweekend10am11am040laps2x20laps' target='_blank') Book Now
