Winter 2022 price updates

--- a/src/pug/_partials/navigation.pug
+++ b/src/pug/_partials/navigation.pug
@@ -29,7 +29,7 @@ mixin navigation(currentPage = '/')
             .nav__right--contact--opening-hours--light
               span Open Now
             span #[span.hide-mobile Open every day] 10:00am - 10:30pm
-        a.button.nav__right--book-now(href='/#packages' target='_blank') Book Now
+        a.button.nav__right--book-now(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx' target='_blank') Book Now
 
   nav.nav__secondary
     .container
