--- a/src/pug/corporate-events/index.pug
+++ b/src/pug/corporate-events/index.pug
@@ -16,7 +16,7 @@ block content
       h1.center Corporate Events
       .red-highlight.centered
       p.center.race-packages__description If you’re planning a Corporate Event or Team-Building activity, it can be hard to know what to do! At Fast Lane all of our Corporate Events are run on the 200cc karts which are changed regularly so you know your Customers or Staff are getting the best.
-      p.center.race-packages__description #[span.bold.red PLEASE NOTE:] All drivers require a Balaclava and Gloves for hygiene reasons. Feel free to bring your own, or we can supply them for £2.00 per item.
+      p.center.race-packages__description #[span.bold.red PLEASE NOTE:] All drivers require a Balaclava and Gloves for hygiene reasons. Feel free to bring your own, or we can supply them for £2.50 per item.
 
     .container.race-packages__price-list
       .content-block
@@ -38,8 +38,9 @@ block content
               p 8 Lap Semi-Final
               p 10 Lap Final Race For Top 8 Drivers
             div
-              span £45/driver
+              span £50/driver
               span 16+ drivers
+              a(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=corporategrandprix60driver' target='_blank') Book Now
           li
             div
               h3 Super Prix
@@ -48,8 +49,10 @@ block content
               p 10 Lap Semi-Final
               p 12 Lap Final For Top 16 Drivers
             div
-              span £50/driver
+              span £55/driver
               span 16+ drivers
+              a(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=corporatesupergrandprix66driver' target='_blank') Book Now
+
         p Corporate bookings are subject to VAT at the current rate. #[a(href='/contact' target='_blank') Call us today] to book a corporate event.
               
       .content-block
