--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -31,7 +31,7 @@ block content
       h1.center The midlands' #[span.red premiere] indoor karting experience
       h2.center Specialists in Corporate Entertainment and Hospitality
       div
-        a.button.button__primary(href='#packages') Book Online
+        a.button.button__primary(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx') Book Online
         a.button.button__grey(href='/race-packages') Race Packages
 
   section.grey.category-cards
