--- a/src/pug/juniors-and-parties/index.pug
+++ b/src/pug/juniors-and-parties/index.pug
@@ -15,18 +15,18 @@ block content
     .container
       h1.center Juniors & Parties
       .red-highlight.centered
-      p.center.race-packages__description #[span.bold.red PLEASE NOTE:] All drivers require a Balaclava and Gloves for hygiene reasons. Feel free to bring your own, or we can supply them for £2.00 per item.
+      p.center.race-packages__description #[span.bold.red PLEASE NOTE:] All drivers require a Balaclava and Gloves for hygiene reasons. Feel free to bring your own, or we can supply them for £2.50 per item.
       
     .container.race-packages__price-list
       .content-block
         h2 Kids' Birthday Parties
         .red-highlight
-        p This is a private party package for up to 8 drivers 8 years and older.
+        p This is a private party package for up to 8 drivers aged 8 years and older.
         p.no-margin.bold Kids' Birthday Parties Include:
         ul.race-packages__price-list--includes
-          li 3 x 15 minutes racing sessions with all guests taking part in 2 sessions each, and a birthday person having a special treat and taking part in all 3 sessions.
-          li Hot meal and squash in the private corporate room 
-          li Pizza options
+          li 45 minutes of track time in 3 x 15 minute sessions. All guests taking part in 2 sessions each with the birthday person having a special treat and taking part in all 3 sessions.
+          li Pizza Buffet with Crisps and squash in the private corporate room 
+          li Different Pizza Options to choose from
           li Orange/blackcurrant squash
           li Medal presentation plus a trophy for the birthday boy/girl
         ul.race-packages__price-list--packages
@@ -37,7 +37,7 @@ block content
               p 45 Minutes Driving Time
               p 1 Hour Food & Medals
             div
-              span £300
+              span £350
               span up to 8 drivers
               a(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?packagegroup=juniorpartypackage' target='_blank') Book Now
 
@@ -58,6 +58,14 @@ block content
               p 10 Minute break to compare and discuss lap times, racing lines and that all important pit stop to the loo
               p 25 Minute Session
             div
-              span £400
+              span £450
               span up to 10 drivers
-              a(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=privatehire1hour10drivers400' target='_blank') Book Now
+              a(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=privatehire1hour10drivers45000' target='_blank') Book Now
+          li
+            div
+              h3 40 Minute Private Hire
+              p As above but a slightly shorter 15 Minute session followed by a short 10 Minute break to compare and discuss lap times, racing lines before heading back out for another 15 minutes of karting. Clock up those laps and see who can get the best lap time. 
+            div
+              span £350
+              span up to 10 drivers
+              a(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=privatehire40minutes10drivers35000' target='_blank') Book Now
