--- a/src/pug/race-packages/index.pug
+++ b/src/pug/race-packages/index.pug
@@ -15,12 +15,12 @@ block content
     .container
       h1.center Race Packages
       .red-highlight.centered
-      p.center.race-packages__description #[span.bold.red PLEASE NOTE:] All drivers require a Balaclava and Gloves for hygiene reasons. Feel free to bring your own, or we can supply them for £2.00 per item.
+      p.center.race-packages__description #[span.bold.red PLEASE NOTE:] All drivers require a Balaclava and Gloves for hygiene reasons. Feel free to bring your own, or we can supply them for £2.50 per item.
 
     .container.race-packages__price-list
     
       .content-block
-        h2 Grand Prix Events
+        h2 Grand Prix Events (aged 14yrs+)
         .red-highlight
         p This event is set for medium/large groups intent on a good night's racing, and offers the ultimate karting experience. Groups will have exclusive use of the track for the duration of the event.
         p Grand Prix heats allow every driver to start from different positions on the grid, positions are all worked out by our computer so that it's as fair as possible across the event.      
@@ -37,9 +37,9 @@ block content
               p 6 x 6 Lap Heats Per Driver
               p 8 Lap Final Race For Top 8 Drivers
             div
-              span £40 per driver
+              span £45 per driver
               span 13+ drivers
-              a(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=grandprix40driver' target='_blank') Book Now
+              a(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=grandprix45driver' target='_blank') Book Now
           li
             div
               h3 Ultimate Super Grand Prix
@@ -48,14 +48,14 @@ block content
               p 8 Lap Semi Final For Top 16 Drivers
               p 10 Lap Grand Final For Top 8 Drivers
             div
-              span £45 per driver
+              span £50 per driver
               span 13+ drivers
-              a(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=supergrandprix45driver' target='_blank') Book Now
+              a(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=supergrandprix50driver' target='_blank') Book Now
 
       .content-block
-        h2 Team Challenge Events
+        h2 Team Challenge Events (aged 14yrs+)
         .red-highlight
-        p All the thrills of our Individual events only in team format. Bring tactics into play with driver changes and pit stops at the best possible times and your team may just get the win.
+        p For a minimum of 8 teams, these events have all the thrills of our Individual events only in team format. Bring tactics into play with driver changes and pit stops at the best possible times and your team may just get the win.
         ul.race-packages__price-list--packages
           li
             div
@@ -63,30 +63,30 @@ block content
               p 30 Minute combined Practice & Qualifying Session
               p 60 Minute Non-Stop Race with Driver Changes Throughout
             div
-              span £100 per Team
+              span £120 per Team
               span 2/3 Drivers per Team
-              a(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=endurance090teamchallenge23drivers100team' target='_blank') Book Now
+              a(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=endurance090teamchallenge23drivers120team' target='_blank') Book Now
           li
             div
               h3 Team Challenge 120
               p 30 Minute combined Practice & Qualifying Session
               p 90 Minute Non-Stop Race with Driver Changes Throughout
             div
-              span £125 per Team
+              span £150 per Team
               span 3 Drivers per Team
-              a(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=endurance120teamchallenge3drivers125team' target='_blank') Book Now
+              a(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=endurance120teamchallenge3drivers150team' target='_blank') Book Now
           li
             div
               h3 Team Challenge 150
               p 30 Minute combined Practice & Qualifying Session
               p 120 Minute Non-Stop Race with Driver Changes Throughout
             div
-              span £150 per Team
+              span £175 per Team
               span 3/4 Drivers per Team
-              a(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=endurance150teamchallenge34drivers150team' target='_blank') Book Now
+              a(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=endurance150teamchallenge34drivers175team' target='_blank') Book Now
               
       .content-block
-        h2 Individual Endurance Events
+        h2 Endurance Events (aged 14yrs+)
         .red-highlight
         p Endurance racing is a fantastic team building or stag & hen party event. It is a multi lap event which can be run as individuals or teams. These events are run on our 200cc Sodi SR4 karts. They start with the Dash 30 minute Race Event going up to the 60 minute Super Challenge race for individuals, or for the Team Challenge Races we have 90 (1.5 Hours) - 150 Minute (2.5 Hours) Events.
 
@@ -105,9 +105,9 @@ block content
               p 15 Minute Break to Discuss and Hone your Racing Lines
               p 15 Minute Non-Stop Race
             div
-              span £35.00 per driver
+              span £40 per driver
               span 8-10 drivers
-              a(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=endurance030dash35driver' target='_blank') Book Now
+              a(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=endurance030dash40driver' target='_blank') Book Now
           li
             div
               h3 Challenge 45
@@ -115,9 +115,9 @@ block content
               p 15 Minute Break
               p 2 x 15 Minute Races with 15 Minute Breaks between
             div
-              span £45.00 per driver
+              span £50 per driver
               span 8-10 drivers
-              a(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=endurance045challenge45driver' target='_blank') Book Now
+              a(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=endurance045challenge50driver' target='_blank') Book Now
           li
             div
               h3 Super Challenge 60
@@ -125,7 +125,7 @@ block content
               p 15 Minute Break
               p 3 x 15 Minute Races with 15 Minute Breaks between
             div
-              span £55.00 per driver
+              span £60 per driver
               span 8-10 drivers
-              a(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=endurance060superchallenge55driver' target='_blank') Book Now
+              a(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=endurance060superchallenge60driver' target='_blank') Book Now
               
