--- a/src/css/_partials/buttons.styl
+++ b/src/css/_partials/buttons.styl
@@ -8,8 +8,9 @@
   padding 1.25rem 2.25rem
   box-sizing content-box
   margin 0
-  // border-radius 100px
   border none
+  border-radius 5px
+  overflow hidden
 
   &:hover
     text-decoration none
