--- a/src/pug/race-packages/index.pug
+++ b/src/pug/race-packages/index.pug
@@ -42,7 +42,7 @@ block content
               a(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=grandprix45driver' target='_blank') Book Now
           li
             div
-              h3 Ultimate Super Grand Prix
+              h3 Super Grand Prix #[span.sticker Popular]
               p 5 Lap Practice Session
               p 6 x 6 Lap Heats Per Driver
               p 8 Lap Semi Final For Top 16 Drivers
@@ -68,7 +68,7 @@ block content
               a(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=endurance090teamchallenge23drivers120team' target='_blank') Book Now
           li
             div
-              h3 Team Challenge 120
+              h3 Team Challenge 120 #[span.sticker Popular]
               p 30 Minute combined Practice & Qualifying Session
               p 90 Minute Non-Stop Race with Driver Changes Throughout
             div
@@ -110,7 +110,7 @@ block content
               a(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=endurance030dash40driver' target='_blank') Book Now
           li
             div
-              h3 Challenge 45
+              h3 Challenge 45 #[span.sticker Popular]
               p 15 Minute Practice/Qualifying Session
               p 15 Minute Break
               p 2 x 15 Minute Races with 15 Minute Breaks between
