--- a/src/css/_partials/typography.styl
+++ b/src/css/_partials/typography.styl
@@ -27,6 +27,9 @@ h2
 
 h3
   font-size 3.6rem
+  display inline-flex
+  flex-wrap wrap
+  align-items center
 
 h4
   font-size 2.8rem
@@ -64,3 +67,15 @@ p
 
 .red
   color primaryColor
+
+span.sticker
+  background mainGreen
+  padding .5rem 1rem
+  margin 1rem 0 1rem 1rem
+  color white
+  font-family sansSerif
+  font-size 1.4rem
+  font-weight 700
+  box-sizing border-box
+  letter-spacing 0
+  border-radius 5px
