--- a/src/pug/arrive-and-drive/index.pug
+++ b/src/pug/arrive-and-drive/index.pug
@@ -43,7 +43,7 @@ block content
               a(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=juniorandfamilieskarting020laps' target='_blank') Book Now
           li
             div
-              h3 40 lap practice
+              h3 40 lap practice #[span.sticker Popular]
               p 2 x 20 Laps (15 Minute) Sessions
               p Only £17.50 per session
 
@@ -54,7 +54,7 @@ block content
               a(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=juniorandfamilieskarting040laps2x20laps' target='_blank') Book Now
           li
             div
-              h3 66 lap practice
+              h3 66 lap practice #[span.sticker Best Value]
               p 3 x 22 Laps (16 Minute) Sessions
               p Midweek Only
               p Only £15.00 per session
@@ -89,7 +89,7 @@ block content
               a(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=practice040lap2x20laps' target='_blank') Book Now
           li
             div
-              h3 66 lap practice
+              h3 66 lap practice #[span.sticker Popular]
               p 3 x 22 Laps (16 Minute) Sessions
               p Only £15.00 per session
             div
@@ -99,7 +99,7 @@ block content
               a(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=practice066lap3x22laps' target='_blank') Book Now
           li
             div
-              h3 100 lap practice
+              h3 100 lap practice #[span.sticker Best Value]
               p 4 x 25 Laps (15 Minute) Sessions
               p Only £13.75 per session
             div
@@ -121,7 +121,7 @@ block content
               a(href='https://fastlane.bookmykarting.co.uk/book/385/booking.aspx?package=juniorkartingweekend10am11am020laps' target='_blank') Book Now
           li
             div
-              h3 40 lap practice
+              h3 40 lap practice #[span.sticker Popular]
               p 2 x 20 Laps (15 Minute) Sessions
               p Only £17.50 per session
             div
